# MaMONAta

./: .gitignore  CMakeLists.txt  Makefile  README.md  b.mata  det.mata  min.mata
automata/: a.mata  atm1.mata
examples/: CMakeLists.txt  brzozowski.cc  complement.cc  determinize.cc  hopcroft.cc  intersection.cc  to_mona.cc  to_mona_dot.cc  to_mtrobdd_dot.cc  union.cc
include/: mtrobdd.hh  nfa.hh  timer.hh
include/mata-bridge/: nfa.hh
include/mona-bridge/: nfa.hh
src/: main.cc  mtrobdd.cc
src/mata-bridge/: nfa.cc
src/mona-bridge/: nfa.cc
